package co.edu.utp.misiontic2022.lgutierrez.modelo;

public enum EstadoPedido {
    SIN_ENTREGAR, PENDIENTE_COBRAR
}
